# tensor_permeability

./: README.md
analysis/src/: analyze.cpp  analyze.h  dfn_omega.cpp  dfn_omega.h  fetch.cpp  fetch.h  make_omega_generator.cpp  make_omega_generator.h  omega.cpp  omega.h  omega_bdistance_configurator.cpp  omega_bdistance_configurator.h  omega_bdistance_generator.cpp  omega_bdistance_generator.h  omega_configurator_factory.cpp  omega_configurator_factory.h  omega_corner_points_configurator.cpp  omega_corner_points_configurator.h  omega_corner_points_generator.cpp  omega_corner_points_generator.h  omega_generator.cpp  omega_generator.h  omega_test.cpp  report.cpp  report.h  results.cpp  results.h
cmake/dev/: CMakeLists.txt
configurator/src/: fracture_configurator_factory.cpp  fracture_configurator_factory.h  matrix_configurator_factory.cpp  matrix_configurator_factory.h  regional_uniform_fracture_configurator.cpp  regional_uniform_fracture_configurator.h  uniform_fracture_configurator.cpp  uniform_fracture_configurator.h  uniform_matrix_configurator.cpp  uniform_matrix_configurator.h
doc/: design.md  doxysession
doc/gofrak/: gofrak.md
python/: tp_ellipsoid.py
solver/src/: boundaries.cpp  boundaries.h  pressure_solver.cpp  pressure_solver.h  pressure_solver_test.cpp  sort_boundaries.cpp  sort_boundaries.h
src/: bpreds.h  configurator.cpp  configurator.h  configurator_factory.cpp  configurator_factory.h  defs.h  elops.h  main.cpp  model_io.cpp  model_io.h  null_configurator.cpp  null_configurator.h  run.cpp  run.h  setting.cpp  setting.h  setting_test.cpp  settings.cpp  settings.h  settings_test.cpp  ttrans.h  ttrans_test.cpp
test/: config.json  dev.cpp  main.cpp
